# test_fastapi_webapp

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: dependencies.py  main.py  models.py
app/routers/: data_router.py
tests/: conftest.py  test_main.py
