[tool.poetry]
name = "test-fastapi-webapp"
version = "0.1.0"
description = ""
authors = ["Leonid3# <antonfenrisis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
redis = "^5.0.3"
pytest = "^8.1.1"
pydantic = "^2.6.4"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
